--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <title>Guessing Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">.
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">.
   </head>
   <!-- Div divides page up, container for different pieces of HTML-->
   <!-- All visible elements belong in the body-->
@@ -64,5 +64,7 @@
 
     </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="GuessingGame.js"></script>
   </body>
 </html>
